--- a/src/CombatDicesTeam.Graphs.Layout/CombatDicesTeam.Graphs.Layout.csproj
+++ b/src/CombatDicesTeam.Graphs.Layout/CombatDicesTeam.Graphs.Layout.csproj
@@ -34,16 +34,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="CombatDicesTeam.Graphs" Version="1.0.1" />
         <PackageReference Include="DotNet.ReproducibleBuilds" Version="1.1.1">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
         </PackageReference>
         
         <PackageReference Include="JetBrains.Annotations" Version="2022.1.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\CombatDicesTeam.Graphs\CombatDicesTeam.Graphs.csproj" />
     </ItemGroup>
 
     <ItemGroup>
