--- a/tests/CombatDicesTeam.Graphs.Layout.Tests/CombatDicesTeam.Graphs.Layout.Tests.csproj
+++ b/tests/CombatDicesTeam.Graphs.Layout.Tests/CombatDicesTeam.Graphs.Layout.Tests.csproj
@@ -19,7 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\CombatDicesTeam.Graphs.Visualization\CombatDicesTeam.Graphs.Visualization.csproj" />
+      <ProjectReference Include="..\..\src\CombatDicesTeam.Graphs.Layout\CombatDicesTeam.Graphs.Layout.csproj" />
     </ItemGroup>
 
 </Project>
